Se agrega pie de página con datos de Ariana MC

--- a/index.html
+++ b/index.html
@@ -235,10 +235,16 @@
         </div>
 
       </div>
+<div class="text-center text-white-50 small mt-4">
+  Coffee IoT · Panel de control y monitoreo · 2026<br>
+  Autor: Ariana Muñoz Castillo<br>
+  <a href="https://www.linkedin.com/in/ariana-muñoz-castillo-0a817b381" 
+     target="_blank" 
+     class="text-white text-decoration-none">
+     Linkedin: www.linkedin.com/in/ariana-muñoz-castillo-0a817b381
+  </a>
+</div>
 
-      <div class="text-center text-white-50 small mt-4">
-        Coffee IoT · Panel de control y monitoreo · 2026
-      </div>
     </div>
   </header>
 
