Footer con mis datos como autor de la pagina

--- a/admin.html
+++ b/admin.html
@@ -349,4 +349,13 @@ $btnAgregar?.addEventListener("click", async ()=>{
 render();
   </script>
 </body>
+ <footer class="footer-cafe py-4 mt-auto"> <div class="container text-center"> <div class="text-white-50 small"> 
+     <div>Coffee IoT · Panel de control y monitoreo · 2026</div>
+       <div>Autor: Ariana Muñoz Castillo</div>
+        <div> 
+  <a href="https://www.linkedin.com/in/ariana-muñoz-castillo-0a817b381" target="_blank" class="text-white text-decoration-none"> Linkedin: www.linkedin.com/in/ariana-muñoz-castillo-0a817b381 </a> 
+       </div>
+     </div> 
+   </div>
+ </footer>
 </html>
