--- a/index.html
+++ b/index.html
@@ -235,19 +235,21 @@
         </div>
 
       </div>
-<div class="text-center text-white-50 small mt-4">
-  Coffee IoT · Panel de control y monitoreo · 2026<br>
-  Autor: Ariana Muñoz Castillo<br>
-  <a href="https://www.linkedin.com/in/ariana-muñoz-castillo-0a817b381" 
-     target="_blank" 
-     class="text-white text-decoration-none">
-     Linkedin: www.linkedin.com/in/ariana-muñoz-castillo-0a817b381
-  </a>
+
 </div>
 
     </div>
   </header>
 
+  <footer class="footer-cafe py-4 mt-auto"> <div class="container text-center"> <div class="text-white-50 small"> 
+     <div>Coffee IoT · Panel de control y monitoreo · 2026</div>
+       <div>Autor: Ariana Muñoz Castillo</div>
+        <div> 
+  <a href="https://www.linkedin.com/in/ariana-muñoz-castillo-0a817b381" target="_blank" class="text-white text-decoration-none"> Linkedin: www.linkedin.com/in/ariana-muñoz-castillo-0a817b381 </a> 
+       </div>
+     </div> 
+   </div>
+ </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="app.js"></script>
 
