--- a/monitoreo.html
+++ b/monitoreo.html
@@ -117,7 +117,21 @@
       </div>
     </div>
   </main>
-
+<footer class="footer-cafe py-4 mt-auto">
+    <div class="container text-center">
+      <div class="text-white-50 small">
+        <div>Coffee IoT · Panel de control y monitoreo · 2026</div>
+        <div>Autor: Ariana Muñoz Castillo</div>
+        <div>
+          <a href="https://www.linkedin.com/in/ariana-muñoz-castillo-0a817b381"
+             target="_blank"
+             class="text-white text-decoration-none">
+            Linkedin: www.linkedin.com/in/ariana-muñoz-castillo-0a817b381
+          </a>
+        </div>
+      </div>
+    </div>
+  </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
   <script>
