--- a/control.html
+++ b/control.html
@@ -4,11 +4,10 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Control - Coffee IoT</title>
-  <link rel="icon" type="image/x-icon" href="img/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico">
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="estilos.css" />
-</head>
+<link rel="stylesheet" href="assets/css/estilos.css"></head>
 
 <body class="bg-cafe">
   <nav class="navbar navbar-expand-lg navbar-dark barra-cafe">
@@ -324,7 +323,7 @@ function cafeteriaHTML(c){
       <!-- PANEL CON IMAGEN -->
       <div class="col-lg-8">
         <div class="panel-iot" data-panel="${c.id}">
-          <img src="img/panel.jpeg" class="img-fluid rounded-4" alt="Panel IoT Cafetería">
+          <img src="assets/img/panel.jpeg" class="img-fluid rounded-4" alt="Panel IoT Cafetería">
 
           <!-- CAFETERA (interruptores) -->
           ${CAF_ITEMS.map(it => `
@@ -456,13 +455,7 @@ async function onClick(e){
   if(action !== "toggle-activa" && cafeteria.activa === false) return;
 
   try{
-    if(action === "toggle-activa"){
-      cafeteria.activa = !cafeteria.activa;
-      cafeteria.actualizado_en = nowISO();
-      await putCafeteria(cafId, cafeteria);
-      await cargarTodo();
-      return;
-    }
+   
 
     // CAFETERA ON/OFF
     if(action === "caf-on" || action === "caf-off"){
