--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Panel IoT Cafetería</title>
-<link rel="icon" type="image/x-icon" href="img/favicon.ico">
+<link rel="icon" type="image/x-icon" href="assets/img/favicon.ico">
 
   <!-- Bootstrap 5 -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
-  <link rel="stylesheet" href="estilos.css" />
-
+<link rel="stylesheet" href="assets/css/estilos.css">
   <style>
     /* SOLO estética extra (no afecta tu lógica) */
     .hero-wrap{
@@ -251,7 +250,7 @@
    </div>
  </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="app.js"></script>
+  <script src="assets/js/app.js"></script>
 
   <!-- KPIs solo visuales (no rompe tu app.js) -->
   <script>
