--- a/index.html
+++ b/index.html
@@ -4,275 +4,126 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Panel IoT Cafetería</title>
-<link rel="icon" type="image/x-icon" href="assets/img/favicon.ico">
 
-  <!-- Bootstrap 5 -->
+  <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico">
+
+  <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
-<link rel="stylesheet" href="assets/css/estilos.css">
-  <style>
-    /* SOLO estética extra (no afecta tu lógica) */
-    .hero-wrap{
-      position: relative;
-      padding: 3.5rem 0 2.5rem;
-    }
-    .hero-wrap::before{
-      content:"";
-      position:absolute; inset:0;
-      background: radial-gradient(800px 320px at 20% 15%, rgba(255,255,255,.08), transparent 55%),
-                  radial-gradient(700px 280px at 80% 35%, rgba(255,196,0,.10), transparent 60%);
-      pointer-events:none;
-    }
-    .kpi{
-      border: 1px solid rgba(255,255,255,.10);
-      background: rgba(0,0,0,.18);
-      border-radius: 18px;
-      padding: 14px 16px;
-      min-height: 88px;
-    }
-    .kpi .num{
-      font-size: 1.4rem;
-      font-weight: 800;
-      color: #fff;
-      line-height: 1;
-    }
-    .kpi .lbl{
-      font-size:.85rem;
-      color: rgba(255,255,255,.65);
-    }
-    .quick-card{
-      border: 1px solid rgba(255,255,255,.10);
-      background: rgba(0,0,0,.18);
-      border-radius: 18px;
-      padding: 18px;
-      transition: transform .12s ease, box-shadow .12s ease;
-      height: 100%;
-    }
-    .quick-card:hover{
-      transform: translateY(-2px);
-      box-shadow: 0 18px 40px rgba(0,0,0,.25);
-    }
-    .chip{
-      display:inline-flex; align-items:center; gap:.35rem;
-      padding: .3rem .55rem;
-      border-radius: 999px;
-      font-size: .75rem;
-      border: 1px solid rgba(255,255,255,.12);
-      color: rgba(255,255,255,.8);
-      background: rgba(0,0,0,.20);
-    }
-    .chip .dot{
-      width:8px;height:8px;border-radius:999px;
-      background: rgba(255,255,255,.35);
-    }
-    .divider-soft{
-      height:1px;
-      background: linear-gradient(90deg, transparent, rgba(255,255,255,.12), transparent);
-      margin: 1rem 0;
-    }
-    .btn-soft{
-      border-radius: 14px;
-    }
-    .mini-help{
-      font-size:.85rem;
-      color: rgba(255,255,255,.55);
-    }
-  </style>
+  <!-- Tus estilos -->
+  <link rel="stylesheet" href="assets/css/estilos.css">
+
 </head>
 
 <body class="bg-cafe">
 
-  <!-- NAV -->
-  <nav class="navbar navbar-expand-lg navbar-dark barra-cafe">
-    <div class="container">
-      <a class="navbar-brand fw-bold" href="index.html">Coffee IoT</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nav">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div id="nav" class="collapse navbar-collapse">
-        <ul class="navbar-nav ms-auto gap-2">
-          <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="admin.html">Admin</a></li>
-          <li class="nav-item"><a class="nav-link" href="control.html">Control</a></li>
-          <li class="nav-item"><a class="nav-link" href="monitoreo.html">Monitoreo</a></li>
-        </ul>
-      </div>
+<!-- NAV -->
+<nav class="navbar navbar-expand-lg navbar-dark barra-cafe">
+  <div class="container">
+    <a class="navbar-brand fw-bold" href="index.html">Coffee IoT</a>
+
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nav">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div id="nav" class="collapse navbar-collapse">
+      <ul class="navbar-nav ms-auto gap-2">
+        <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
+        <li class="nav-item"><a class="nav-link" href="admin.html">Admin</a></li>
+        <li class="nav-item"><a class="nav-link" href="control.html">Control</a></li>
+        <li class="nav-item"><a class="nav-link" href="monitoreo.html">Monitoreo</a></li>
+      </ul>
     </div>
-  </nav>
+  </div>
+</nav>
 
-  <!-- HERO / DASH -->
-  <header class="hero-wrap">
-    <div class="container position-relative">
-      <div class="row g-4 align-items-stretch">
+<!-- CONTENIDO -->
+<header class="hero-wrap">
+  <div class="container">
 
-        <!-- IZQ: TITULO + ACCIONES -->
-        <div class="col-lg-7">
-          <div class="tarjeta-vidrio p-4 h-100">
-            <div class="d-flex flex-wrap align-items-center justify-content-between gap-2">
-              <div>
-                <h1 class="display-6 fw-bold text-white mb-1">Panel IoT de Cafetería</h1>
-                <p class="text-white-50 mb-0">
-                  Administración, control y monitoreo en tiempo real de cafetera, crepera y molino.
-                </p>
-              </div>
-              <span class="chip">
-                <span class="dot"></span>
-                MockAPI + Bootstrap 5
-              </span>
-            </div>
+    <!-- TARJETA PRINCIPAL -->
+    <div class="tarjeta-vidrio p-4 mb-4">
+      <h1 class="display-6 fw-bold text-white">Panel IoT de Cafetería</h1>
+      <p class="text-white-50">
+        Administración, control y monitoreo en tiempo real de cafetera, crepera y molino.
+      </p>
 
-            <div class="divider-soft"></div>
+      <button class="btn btn-light fw-semibold" id="btnRecargar">Recargar</button>
+      <span class="badge bg-warning text-dark" id="estadoConexion">Conectando...</span>
+    </div>
 
-            <div class="d-flex flex-wrap gap-2 align-items-center">
-              <button class="btn btn-light fw-semibold btn-soft" id="btnRecargar">Recargar</button>
-              <span class="badge rounded-pill text-bg-warning align-self-center" id="estadoConexion">
-                Conectando...
-              </span>
-              <span class="badge text-bg-info align-self-center">Auto: 2s</span>
-            </div>
-
-            <div class="row g-3 mt-3">
-              <div class="col-md-4">
-                <div class="kpi">
-                  <div class="lbl">Dispositivos</div>
-                  <div class="num" id="kpi_total">—</div>
-                  <div class="lbl mt-1">registrados</div>
-                </div>
-              </div>
-              <div class="col-md-4">
-                <div class="kpi">
-                  <div class="lbl">Alertas</div>
-                  <div class="num" id="kpi_alertas">—</div>
-                  <div class="lbl mt-1">activas</div>
-                </div>
-              </div>
-              <div class="col-md-4">
-                <div class="kpi">
-                  <div class="lbl">Última actualización</div>
-                  <div class="num" id="kpi_hora">—</div>
-                  <div class="lbl mt-1">hora local</div>
-                </div>
-              </div>
-            </div>
-
-            <div class="mini-help mt-3">
-              Tip: si ves “Error API”, revisa que tu MockAPI esté activo y que la URL sea correcta.
-            </div>
-          </div>
+    <!-- KPIs -->
+    <div class="row g-3 mb-4">
+      <div class="col-md-4">
+        <div class="tarjeta-vidrio p-3">
+          <div class="text-white-50">Cafeterías</div>
+          <div class="h3 text-white" id="kpi_total">0</div>
         </div>
-
-        <!-- DER: ACCESOS RAPIDOS -->
-        <div class="col-lg-5">
-          <div class="tarjeta-vidrio p-4 h-100">
-            <div class="d-flex justify-content-between align-items-center">
-              <h5 class="text-white mb-0">Accesos rápidos</h5>
-              <span class="chip"><span class="dot"></span> Vista rápida</span>
-            </div>
-
-            <div class="row g-3 mt-2">
-              <div class="col-12">
-                <a class="text-decoration-none" href="control.html">
-                  <div class="quick-card">
-                    <div class="d-flex justify-content-between align-items-start">
-                      <div>
-                        <div class="text-white fw-semibold fs-5">Ir a Control</div>
-                        <div class="text-white-50">Encender/apagar módulos y ajustar temperatura/molido.</div>
-                      </div>
-                      <span class="badge text-bg-light">▶</span>
-                    </div>
-                  </div>
-                </a>
-              </div>
-
-              <div class="col-12">
-                <a class="text-decoration-none" href="monitoreo.html">
-                  <div class="quick-card">
-                    <div class="d-flex justify-content-between align-items-start">
-                      <div>
-                        <div class="text-white fw-semibold fs-5">Ir a Monitoreo</div>
-                        <div class="text-white-50">Estatus en vivo, historial y alertas con auto refresco.</div>
-                      </div>
-                      <span class="badge text-bg-light">▶</span>
-                    </div>
-                  </div>
-                </a>
-              </div>
-
-              <div class="col-12">
-                <a class="text-decoration-none" href="admin.html">
-                  <div class="quick-card">
-                    <div class="d-flex justify-content-between align-items-start">
-                      <div>
-                        <div class="text-white fw-semibold fs-5">Administrar</div>
-                        <div class="text-white-50">CRUD de dispositivos IoT (crear/editar/eliminar).</div>
-                      </div>
-                      <span class="badge text-bg-light">▶</span>
-                    </div>
-                  </div>
-                </a>
-              </div>
-            </div>
-
-            <div class="text-white-50 small mt-3">
-              API: <span id="apiBase"></span>
-            </div>
-          </div>
-        </div>
-
-        <!-- ABAJO: TARJETAS DE DISPOSITIVOS (TU app.js las pinta aquí) -->
-        <div class="col-12">
-          <div class="tarjeta-vidrio p-4">
-            <div class="d-flex justify-content-between align-items-center mb-3">
-              <h5 class="text-white mb-0">Dispositivos (estado actual)</h5>
-              <span class="text-white-50 small">Se actualiza con el botón “Recargar”</span>
-            </div>
-
-            <div class="row g-3" id="contenedorDispositivos">
-              <!-- app.js pinta tarjetas aquí -->
-            </div>
-          </div>
-        </div>
-
       </div>
 
-</div>
+      <div class="col-md-4">
+        <div class="tarjeta-vidrio p-3">
+          <div class="text-white-50">Número de Cafeterías con Alertas</div>
+          <div class="h3 text-white" id="kpi_alertas">0</div>
+        </div>
+      </div>
 
+      <div class="col-md-4">
+        <div class="tarjeta-vidrio p-3">
+          <div class="text-white-50">Última actualización</div>
+          <div class="h3 text-white" id="kpi_hora">--</div>
+        </div>
+      </div>
     </div>
-  </header>
 
-  <footer class="footer-cafe py-4 mt-auto"> <div class="container text-center"> <div class="text-white-50 small"> 
-     <div>Coffee IoT · Panel de control y monitoreo · 2026</div>
-       <div>Autor: Ariana Muñoz Castillo</div>
-        <div> 
-  <a href="https://www.linkedin.com/in/ariana-muñoz-castillo-0a817b381" target="_blank" class="text-white text-decoration-none"> Linkedin: www.linkedin.com/in/ariana-muñoz-castillo-0a817b381 </a> 
-       </div>
-     </div> 
-   </div>
- </footer>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/js/app.js"></script>
+    <!-- DISPOSITIVOS -->
+    <div class="tarjeta-vidrio p-4">
+      <h5 class="text-white mb-3">Dispositivos</h5>
+      <div class="row g-3" id="contenedorDispositivos">
+        <!-- app.js pinta aquí -->
+      </div>
+    </div>
 
-  <!-- KPIs solo visuales (no rompe tu app.js) -->
-  <script>
-    // Este script solo lee lo que ya pintó app.js para mostrar KPIs bonitos.
-    function refrescarKPIs(){
-      const cards = document.querySelectorAll("#contenedorDispositivos .tarjeta-dispositivo");
-      document.getElementById("kpi_total").textContent = cards.length ? String(cards.length) : "0";
+  </div>
+</header>
 
-      // alerta: detecta si hay "estado-alerta" o text-warning con ⚠
-      let alertas = 0;
-      cards.forEach(c=>{
-        if(c.querySelector(".estado-alerta")) alertas++;
-      });
-      document.getElementById("kpi_alertas").textContent = String(alertas);
+<footer class="footer-cafe py-4 mt-4">
+  <div class="container text-center text-white-50 small">
+    Coffee IoT · Ariana Muñoz Castillo · 2026
+  </div>
+</footer>
 
-      document.getElementById("kpi_hora").textContent =
-        new Date().toLocaleTimeString([], {hour:"2-digit", minute:"2-digit"});
-    }
+<!-- Bootstrap -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
-    // intenta refrescar cada 2s por estética
-    setInterval(refrescarKPIs, 2000);
-    setTimeout(refrescarKPIs, 500);
-  </script>
+<!-- IMPORTANTE: defer para que no falle tu app.js -->
+<script src="assets/js/app.js" defer></script>
+
+<!-- KPIs -->
+<script>
+function refrescarKPIs(){
+
+  const contenedor = document.getElementById("contenedorDispositivos");
+  if(!contenedor) return;
+
+  const cards = contenedor.querySelectorAll(".tarjeta-dispositivo");
+
+  document.getElementById("kpi_total").textContent = cards.length;
+
+  let alertas = 0;
+  cards.forEach(c=>{
+    if(c.querySelector(".estado-alerta")) alertas++;
+  });
+
+  document.getElementById("kpi_alertas").textContent = alertas;
+
+  document.getElementById("kpi_hora").textContent =
+    new Date().toLocaleTimeString([], {hour:"2-digit", minute:"2-digit"});
+}
+
+setInterval(refrescarKPIs,2000);
+setTimeout(refrescarKPIs,500);
+</script>
+
 </body>
 </html>
