--- a/index.html
+++ b/index.html
@@ -4,15 +4,44 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Panel IoT Cafetería</title>
-
   <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico">
 
   <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-
-  <!-- Tus estilos -->
   <link rel="stylesheet" href="assets/css/estilos.css">
 
+  <style>
+    .hero-wrap{
+      padding: 3.5rem 0 2.5rem;
+    }
+
+    .kpi{
+      border: 1px solid rgba(255,255,255,.10);
+      background: rgba(0,0,0,.18);
+      border-radius: 18px;
+      padding: 14px 16px;
+      min-height: 88px;
+      text-align:center;
+    }
+
+    .kpi .num{
+      font-size: 1.6rem;
+      font-weight: 800;
+      color: #fff;
+    }
+
+    .kpi .lbl{
+      font-size:.9rem;
+      color: rgba(255,255,255,.65);
+    }
+
+    .caf-resumen{
+      border: 1px solid rgba(255,255,255,.10);
+      background: rgba(0,0,0,.18);
+      border-radius: 18px;
+      padding: 14px 16px;
+    }
+  </style>
 </head>
 
 <body class="bg-cafe">
@@ -22,7 +51,7 @@
   <div class="container">
     <a class="navbar-brand fw-bold" href="index.html">Coffee IoT</a>
 
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nav">
+    <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#nav">
       <span class="navbar-toggler-icon"></span>
     </button>
 
@@ -37,93 +66,105 @@
   </div>
 </nav>
 
-<!-- CONTENIDO -->
+
+<!-- HERO -->
 <header class="hero-wrap">
   <div class="container">
 
-    <!-- TARJETA PRINCIPAL -->
-    <div class="tarjeta-vidrio p-4 mb-4">
-      <h1 class="display-6 fw-bold text-white">Panel IoT de Cafetería</h1>
-      <p class="text-white-50">
-        Administración, control y monitoreo en tiempo real de cafetera, crepera y molino.
-      </p>
+    <div class="row justify-content-center">
+      <div class="col-lg-8">
 
-      <button class="btn btn-light fw-semibold" id="btnRecargar">Recargar</button>
-      <span class="badge bg-warning text-dark" id="estadoConexion">Conectando...</span>
+        <div class="tarjeta-vidrio p-4 text-center">
+
+          <h1 class="display-6 fw-bold text-white mb-2">
+            Panel IoT de Cafetería
+          </h1>
+
+          <p class="text-white-50">
+            Dashboard general — para operar usa <b>Control</b> y para auditoría <b>Monitoreo</b>.
+          </p>
+
+          <div class="d-flex justify-content-center gap-2 mt-3 flex-wrap">
+            <button class="btn btn-light fw-semibold" id="btnRecargar">
+              Recargar
+            </button>
+
+            <span class="badge rounded-pill text-bg-warning" id="estadoConexion">
+              Conectando...
+            </span>
+
+            <span class="badge text-bg-info">
+              Auto refresco cada 2s
+            </span>
+          </div>
+
+          <div class="row g-3 mt-4">
+            <div class="col-md-4">
+              <div class="kpi">
+                <div class="lbl">Cafeterías</div>
+                <div class="num" id="kpi_total">—</div>
+              </div>
+            </div>
+
+            <div class="col-md-4">
+              <div class="kpi">
+                <div class="lbl">Activas</div>
+                <div class="num" id="kpi_activas">—</div>
+              </div>
+            </div>
+
+            <div class="col-md-4">
+              <div class="kpi">
+                <div class="lbl">Alertas</div>
+                <div class="num" id="kpi_alertas">—</div>
+              </div>
+            </div>
+          </div>
+
+        </div>
+      </div>
     </div>
 
-    <!-- KPIs -->
-    <div class="row g-3 mb-4">
-      <div class="col-md-4">
-        <div class="tarjeta-vidrio p-3">
-          <div class="text-white-50">Cafeterías</div>
-          <div class="h3 text-white" id="kpi_total">0</div>
-        </div>
-      </div>
 
-      <div class="col-md-4">
-        <div class="tarjeta-vidrio p-3">
-          <div class="text-white-50">Número de Cafeterías con Alertas</div>
-          <div class="h3 text-white" id="kpi_alertas">0</div>
-        </div>
-      </div>
+    <!-- RESUMEN CAFETERIAS -->
+    <div class="row justify-content-center mt-4">
+      <div class="col-lg-8">
 
-      <div class="col-md-4">
-        <div class="tarjeta-vidrio p-3">
-          <div class="text-white-50">Última actualización</div>
-          <div class="h3 text-white" id="kpi_hora">--</div>
-        </div>
-      </div>
-    </div>
+        <div class="tarjeta-vidrio p-4">
 
-    <!-- DISPOSITIVOS -->
-    <div class="tarjeta-vidrio p-4">
-      <h5 class="text-white mb-3">Dispositivos</h5>
-      <div class="row g-3" id="contenedorDispositivos">
-        <!-- app.js pinta aquí -->
+          <h5 class="text-white text-center mb-3">
+            Resumen rápido por cafetería
+          </h5>
+
+          <div id="contenedorResumen" class="row g-3">
+            <!-- app.js pinta aquí -->
+          </div>
+
+        </div>
+
       </div>
     </div>
 
   </div>
 </header>
 
-<footer class="footer-cafe py-4 mt-4">
+
+<footer class="footer-cafe py-4 mt-auto">
   <div class="container text-center text-white-50 small">
-    Coffee IoT · Ariana Muñoz Castillo · 2026
+    <div>Coffee IoT · Panel de control y monitoreo · 2026</div>
+    <div>Autor: Ariana Muñoz Castillo</div>
+    <div>
+      <a href="https://www.linkedin.com/in/ariana-muñoz-castillo-0a817b381"
+         target="_blank"
+         class="text-white text-decoration-none">
+        Linkedin Ariana Muñoz Castillo
+      </a>
+    </div>
   </div>
 </footer>
 
-<!-- Bootstrap -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-
-<!-- IMPORTANTE: defer para que no falle tu app.js -->
-<script src="assets/js/app.js" defer></script>
-
-<!-- KPIs -->
-<script>
-function refrescarKPIs(){
-
-  const contenedor = document.getElementById("contenedorDispositivos");
-  if(!contenedor) return;
-
-  const cards = contenedor.querySelectorAll(".tarjeta-dispositivo");
-
-  document.getElementById("kpi_total").textContent = cards.length;
-
-  let alertas = 0;
-  cards.forEach(c=>{
-    if(c.querySelector(".estado-alerta")) alertas++;
-  });
-
-  document.getElementById("kpi_alertas").textContent = alertas;
-
-  document.getElementById("kpi_hora").textContent =
-    new Date().toLocaleTimeString([], {hour:"2-digit", minute:"2-digit"});
-}
-
-setInterval(refrescarKPIs,2000);
-setTimeout(refrescarKPIs,500);
-</script>
+<script src="assets/js/app.js"></script>
 
 </body>
 </html>
