--- a/monitoreo.html
+++ b/monitoreo.html
@@ -8,12 +8,39 @@
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/estilos.css" />
+
+  <style>
+    /* ✅ Logo en navbar (a la izquierda de "Coffee IoT") */
+    .brand-logo{
+      width: 24px;
+      height: 24px;
+      border-radius: 6px;
+      object-fit: cover;
+      margin-right: .5rem;
+    }
+
+    /* ✅ LinkedIn con icono */
+    .lnk-linkedin{
+      display:inline-flex;
+      align-items:center;
+      gap:.5rem;
+      color: rgba(255,255,255,.85);
+      text-decoration:none;
+    }
+    .lnk-linkedin:hover{ color:#fff; text-decoration:underline; }
+    .lnk-ico{ width:18px; height:18px; display:inline-block; }
+  </style>
 </head>
 
 <body class="bg-cafe">
   <nav class="navbar navbar-expand-lg navbar-dark barra-cafe">
     <div class="container">
-      <a class="navbar-brand fw-bold" href="index.html">Coffee IoT</a>
+      <!-- ✅ Logo + texto -->
+      <a class="navbar-brand fw-bold d-flex align-items-center" href="index.html">
+        <img src="assets/img/favicon.ico" alt="Logo" class="brand-logo">
+        Coffee IoT
+      </a>
+
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nav">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -110,13 +137,19 @@
       <div class="text-white-50 small">
         <div>Coffee IoT · Panel de control y monitoreo · 2026</div>
         <div>Autor: Ariana Muñoz Castillo</div>
-        <div>
-          <a href="https://www.linkedin.com/in/ariana-muñoz-castillo-0a817b381"
-             target="_blank"
-             class="text-white text-decoration-none">
-            Linkedin: www.linkedin.com/in/ariana-muñoz-castillo-0a817b381
+
+        <!-- ✅ LinkedIn con icono + link -->
+        <div class="mt-2">
+          <a class="lnk-linkedin"
+             href="https://www.linkedin.com/in/ariana-muñoz-castillo-0a817b381"
+             target="_blank" rel="noopener">
+            <svg class="lnk-ico" viewBox="0 0 24 24" aria-hidden="true">
+              <path fill="currentColor" d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.852 3.369-1.852 3.6 0 4.266 2.37 4.266 5.455v6.288zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zM6.814 20.452H3.86V9h2.954v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/>
+            </svg>
+            <span>LinkedIn: Ariana Muñoz Castillo</span>
           </a>
         </div>
+
       </div>
     </div>
   </footer>
